src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PCs and Laptops</fullName>
                </value>
                <value>
                    <fullName>Smartphones and Smartwatches</fullName>
                </value>
                <value>
                    <fullName>Gaming</fullName>
                </value>
                <value>
                    <fullName>Computer Components</fullName>
                </value>
                <value>
                    <fullName>Peripherals</fullName>
                </value>
                <value>
                    <fullName>TV and Audio</fullName>
                </value>
                <value>
                    <fullName>Smarthome</fullName>
                </value>
                <value>
                    <fullName>Accessories</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Display_Image__c</fullName>
        <label>Display Image</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rich_Description__c</fullName>
        <label>Rich Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Warranty_in_Months__c</fullName>
        <label>Warranty in Months</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>